# CodeSpear-CodeShield

./: README.md  pyproject.toml
Attack/: .env.example
Attack/APIModels/: clients.py  config.py  grammar-fireworks.txt  grammar-gpt.lark  run.py
Attack/LocalModels/grammars/: c.lark  cpp.lark  java.lark  python.lark  python_no_comments.lark
Attack/LocalModels/script/: eval.sh  evaluate_asr.py  evaluate_mr.py  merge_shards.py  run.sh  run_main.py  run_parallel.sh
Attack/prompt/test/: prompt_mal.xlsx  prompt_pku.xlsx  prompt_rmc.xlsx
Attack/prompt/test/codelang/: prompt_mal_c.xlsx  prompt_mal_cpp.xlsx  prompt_mal_go.xlsx  prompt_mal_java.xlsx  prompt_rmc_c.xlsx  prompt_rmc_cpp.xlsx  prompt_rmc_go.xlsx  prompt_rmc_java.xlsx
Attack/prompt/train/: collected_prompts_2000.xlsx
Defense/: build_training_data.py  train.py
Defense/merge_config/: merge_7b.yaml  merge_coder7b.yaml  merge_llama3.yaml
codespear.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
